--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<article>
+        <p>This is the first paragraph (white text on black background).</p>
+        <p>This is the second paragraph (standard text color).</p>
+        <p>This is the third paragraph (red text).</p>
+	</article>
+	<ul>
+        <li>List item 1</li>
+        <li>List item 2</li>
+        <li>List item 3</li>
+        <li>List item 4</li>
+        <li>List item 5</li>
+    </ul>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
